	- Fix weapons with reload sounds using oneShotSound = false immediately stopping the SFX when switching to a different weapon.
	- Fix weapons with spindown anims when they stop firing that have overheated under AI control not spinning down until they've cooled down.
	- Missiles:
		- Add 'cruiseRangeTrigger' field to Missiles. Missiles using this will delay firing Cruise motor until within set distance to target.
		- Tweak acoustic propagation loss rate for passive acoustic torpedoes, should have a bit further effective detection range now.
		- Fix INS guidance ordinance not configured with a datalink immediately triggering the lost lock condition and self-destructing.
		- Passive Sonar torpedoes now home in on loudest part, not COM.
		- Fix Terminal Guidance Passive Sonar torpedoes not entering terminal guidance.
- RWP:
	- For S6R10, GM kill craft that lack propulsion and are significantly beyond the asteroid field radius.
	- Adjust attraction of asteroids beyond 90% of the field radius to not clump together at the centre so that they don't kill the sole surviving craft.
	- Add craft spawn warning message if craft doesn't have AI/WM on root part, and root isn't a cockpit.
- FJRT:
	- Add max Extend time limit clamp to override extend behavior that goes on for longer than time limit.
	- Add FJRT settings option to GameModes.

v1.7.1.0
IMPROVEMENTS / FIXES
- General:
	- Add a SimpleRepaint MM patch to ignore incompatible parts.
	- Fix typos and duplicates in the changelog.
- Armor:
	- Add a max armor limit slider (under General Slider Settings) to limit the max thickness of armor. Default: unclamped.
- UI:
	- Team Icon text now scales with icon scale.
- AI:
	- Orbital AI:
		- Adds ability to use controllable sidemounted engines as RCS thrusters.
		- Add toggles to disable use of RCS for translation and rotation.